[gd_scene load_steps=3 format=3 uid="uid://cojmuuii1ldgf"]

[ext_resource type="Script" path="res://UI/Settings/settingsMenu.gd" id="1_6apcn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m1fgi"]
bg_color = Color(0, 0, 0, 1)

[node name="SettingsMenu" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_6apcn")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_m1fgi")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Volume"
horizontal_alignment = 1

[node name="Control3" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 9.84

[node name="Label2" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Dialogue"
horizontal_alignment = 1

[node name="Dialogue" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.01

[node name="Control2" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 9.84

[node name="Label3" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Music"
horizontal_alignment = 1

[node name="Music" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.01

[node name="Control" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 9.84

[node name="Label4" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Misc"
horizontal_alignment = 1

[node name="Misc" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.01

[node name="Exit" type="Button" parent="Panel"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "X"

[connection signal="value_changed" from="Panel/VBoxContainer/Dialogue" to="." method="dialogueChanged"]
[connection signal="value_changed" from="Panel/VBoxContainer/Music" to="." method="musicChanged"]
[connection signal="value_changed" from="Panel/VBoxContainer/Misc" to="." method="miscChanged"]
[connection signal="pressed" from="Panel/Exit" to="." method="_on_exit_pressed"]
